# Teams-Presence-LED

./: .gitignore  plan.md  readme.md
.github/workflows/: release.yml
bridge/TeamsPresenceBridge/: App.xaml  App.xaml.cs  ColorPickerDialog.xaml  ColorPickerDialog.xaml.cs  ConfigModel.cs  Program.cs  SerialManager.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TeamsClient.cs  TeamsLogWatcher.cs  TeamsPresenceBridge.csproj  build.ps1  config.json
bridge/teams-presence-bridge-rs/: Cargo.toml  build.ps1  config.json
bridge/teams-presence-bridge-rs/src/: autostart.rs  config.rs  flasher.rs  hid.rs  main.rs  serial.rs  teams.rs  ui.rs  update_ui.rs  updater.rs
docs/: protocol.md  setup.md
firmware/: platformio.ini
firmware/src/: main.cpp
tools/: serial_test.py
