[package]
name = "teams-presence-bridge-rs"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "TeamsPresenceBridge"
path = "src/main.rs"

[dependencies]
hidapi = "2.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.35"
tray-icon = "0.24"
winreg = "0.56.0"
ureq = { version = "3", features = ["json", "platform-verifier", "rustls"], default-features = false }
espflash = { version = "4", default-features = false, features = ["serialport"] }
serialport = "4"
semver = "1.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
strip = true     # Strip symbols from binary
codegen-units = 1 # Better optimization
panic = "abort"  # Remove panic unwinding code
